src/main/mt22/parser/.antlr/MT22hoaParser.py
# Generated from d:\file\dev\hk222\ppl\pplasm1\src\main\mt22\parser\MT22hoa.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22hoaParser ( Parser ):

    grammarFileName = "MT22hoa.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'auto'", "'break'", 
                     "'boolean'", "'do'", "'else'", "'false'", "'float'", 
                     "'for'", "'function'", "'if'", "'integer'", "'return'", 
                     "'string'", "'true'", "'while'", "'void'", "'out'", 
                     "'continue'", "'of'", "'inherit'", "'array'", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'&&'", "'||'", "'!'", 
                     "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'::'", 
                     "'='", "'('", "')'", "'['", "']'", "'{'", "'}'", "';'", 
                     "':'", "','", "'.'" ]

    symbolicNames = [ "<INVALID>", "INT_TYPE", "VOID_TYPE", "FLOAT_TYPE", 
                      "STRING_TYPE", "BOOLEAN_TYPE", "AUTO_TYPE", "AUTO", 
                      "BREAK", "BOOLEAN", "DO", "ELSE", "FALSE", "FLOAT", 
                      "FOR", "FUNCTION", "IF", "INTEGER", "RETURN", "STRING", 
                      "TRUE", "WHILE", "VOID", "OUT", "CONTINUE", "OF", 
                      "INHERIT", "ARRAY", "ADD", "SUB", "MUL", "DIV", "MOD", 
                      "AND", "OR", "NOT", "EQUAL", "NOT_EQUAL", "LESS", 
                      "LESS_EQUAL", "GREATER", "GREATER_EQUAL", "CONCAT", 
                      "ASSIGN", "LB", "RB", "LSB", "RSB", "LCB", "RCB", 
                      "SEMI", "COLON", "COMMA", "DOT", "ID", "INT_LIT", 
                      "FLOAT_LIT", "BOOL_LIT", "STRING_LIT", "WS", "BLOCK_CMT", 
                      "LINE_CMT", "ERROR_CHAR", "ILLEGAL_ESCAPE", "UNCLOSE_STRING" ]

    RULE_program = 0
    RULE_decl = 1
    RULE_typ = 2
    RULE_atomic_typ = 3
    RULE_func_typ = 4
    RULE_vardecl = 5
    RULE_fullformat = 6
    RULE_idlist = 7
    RULE_array_decl = 8
    RULE_dimension = 9
    RULE_array_literal = 10
    RULE_exprlist = 11
    RULE_exprlist1 = 12
    RULE_array_index = 13
    RULE_index_expr = 14
    RULE_funcdecl = 15
    RULE_funcpro = 16
    RULE_funcbody = 17
    RULE_paralist = 18
    RULE_paralist1 = 19
    RULE_para = 20
    RULE_funccall = 21
    RULE_arg_list = 22
    RULE_arg_list1 = 23
    RULE_literal = 24
    RULE_sub_expr = 25
    RULE_expr = 26
    RULE_expr1 = 27
    RULE_expr2 = 28
    RULE_expr3 = 29
    RULE_expr4 = 30
    RULE_expr5 = 31
    RULE_expr6 = 32
    RULE_expr7 = 33
    RULE_stmt = 34
    RULE_non_block_stmt = 35
    RULE_assign_stmt = 36
    RULE_if_stmt = 37
    RULE_for_stmt = 38
    RULE_while_stmt = 39
    RULE_do_while_stmt = 40
    RULE_break_stmt = 41
    RULE_continue_stmt = 42
    RULE_return_stmt = 43
    RULE_call_stmt = 44
    RULE_block_stmt = 45

    ruleNames =  [ "program", "decl", "typ", "atomic_typ", "func_typ", "vardecl", 
                   "fullformat", "idlist", "array_decl", "dimension", "array_literal", 
                   "exprlist", "exprlist1", "array_index", "index_expr", 
                   "funcdecl", "funcpro", "funcbody", "paralist", "paralist1", 
                   "para", "funccall", "arg_list", "arg_list1", "literal", 
                   "sub_expr", "expr", "expr1", "expr2", "expr3", "expr4", 
                   "expr5", "expr6", "expr7", "stmt", "non_block_stmt", 
                   "assign_stmt", "if_stmt", "for_stmt", "while_stmt", "do_while_stmt", 
                   "break_stmt", "continue_stmt", "return_stmt", "call_stmt", 
                   "block_stmt" ]

    EOF = Token.EOF
    INT_TYPE=1
    VOID_TYPE=2
    FLOAT_TYPE=3
    STRING_TYPE=4
    BOOLEAN_TYPE=5
    AUTO_TYPE=6
    AUTO=7
    BREAK=8
    BOOLEAN=9
    DO=10
    ELSE=11
    FALSE=12
    FLOAT=13
    FOR=14
    FUNCTION=15
    IF=16
    INTEGER=17
    RETURN=18
    STRING=19
    TRUE=20
    WHILE=21
    VOID=22
    OUT=23
    CONTINUE=24
    OF=25
    INHERIT=26
    ARRAY=27
    ADD=28
    SUB=29
    MUL=30
    DIV=31
    MOD=32
    AND=33
    OR=34
    NOT=35
    EQUAL=36
    NOT_EQUAL=37
    LESS=38
    LESS_EQUAL=39
    GREATER=40
    GREATER_EQUAL=41
    CONCAT=42
    ASSIGN=43
    LB=44
    RB=45
    LSB=46
    RSB=47
    LCB=48
    RCB=49
    SEMI=50
    COLON=51
    COMMA=52
    DOT=53
    ID=54
    INT_LIT=55
    FLOAT_LIT=56
    BOOL_LIT=57
    STRING_LIT=58
    WS=59
    BLOCK_CMT=60
    LINE_CMT=61
    ERROR_CHAR=62
    ILLEGAL_ESCAPE=63
    UNCLOSE_STRING=64

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MT22hoaParser.DeclContext,0)


        def EOF(self):
            return self.getToken(MT22hoaParser.EOF, 0)

        def getRuleIndex(self):
            return MT22hoaParser.RULE_program




    def program(self):

        localctx = MT22hoaParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.decl()
            self.state = 93
            self.match(MT22hoaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MT22hoaParser.DeclContext,0)


        def vardecl(self):
            return self.getTypedRuleContext(MT22hoaParser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MT22hoaParser.FuncdeclContext,0)


        def array_decl(self):
            return self.getTypedRuleContext(MT22hoaParser.Array_declContext,0)


        def getRuleIndex(self):
            return MT22hoaParser.RULE_decl




    def decl(self):

        localctx = MT22hoaParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 95
                    self.vardecl()
                    pass

                elif la_ == 2:
                    self.state = 96
                    self.funcdecl()
                    pass

                elif la_ == 3:
                    self.state = 97
                    self.array_decl()
                    pass


                self.state = 100
                self.decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 102
                    self.vardecl()
                    pass

                elif la_ == 2:
                    self.state = 103
                    self.funcdecl()
                    pass

                elif la_ == 3:
                    self.state = 104
                    self.array_decl()
                    pass


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_TYPE(self):
            return self.getToken(MT22hoaParser.INT_TYPE, 0)

        def FLOAT_TYPE(self):
            return self.getToken(MT22hoaParser.FLOAT_TYPE, 0)

        def BOOLEAN_TYPE(self):
            return self.getToken(MT22hoaParser.BOOLEAN_TYPE, 0)

        def STRING_TYPE(self):
            return self.getToken(MT22hoaParser.STRING_TYPE, 0)

        def AUTO_TYPE(self):
            return self.getToken(MT22hoaParser.AUTO_TYPE, 0)

        def getRuleIndex(self):
            return MT22hoaParser.RULE_typ




    def typ(self):

        localctx = MT22hoaParser.TypContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_typ)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22hoaParser.INT_TYPE) | (1 << MT22hoaParser.FLOAT_TYPE) | (1 << MT22hoaParser.STRING_TYPE) | (1 << MT22hoaParser.BOOLEAN_TYPE) | (1 << MT22hoaParser.AUTO_TYPE))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Atomic_typContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_TYPE(self):
            return self.getToken(MT22hoaParser.INT_TYPE, 0)

        def FLOAT_TYPE(self):
            return self.getToken(MT22hoaParser.FLOAT_TYPE, 0)

        def BOOLEAN_TYPE(self):
            return self.getToken(MT22hoaParser.BOOLEAN_TYPE, 0)

        def STRING_TYPE(self):
            return self.getToken(MT22hoaParser.STRING_TYPE, 0)

        def getRuleIndex(self):
            return MT22hoaParser.RULE_atomic_typ




    def atomic_typ(self):

        localctx = MT22hoaParser.Atomic_typContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_atomic_typ)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22hoaParser.INT_TYPE) | (1 << MT22hoaParser.FLOAT_TYPE) | (1 << MT22hoaParser.STRING_TYPE) | (1 << MT22hoaParser.BOOLEAN_TYPE))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_typContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_TYPE(self):
            return self.getToken(MT22hoaParser.INT_TYPE, 0)

        def FLOAT_TYPE(self):
            return self.getToken(MT22hoaParser.FLOAT_TYPE, 0)

        def BOOLEAN_TYPE(self):
            return self.getToken(MT22hoaParser.BOOLEAN_TYPE, 0)

        def STRING_TYPE(self):
            return self.getToken(MT22hoaParser.STRING_TYPE, 0)

        def AUTO_TYPE(self):
            return self.getToken(MT22hoaParser.AUTO_TYPE, 0)

        def VOID_TYPE(self):
            return self.getToken(MT22hoaParser.VOID_TYPE, 0)

        def getRuleIndex(self):
            return MT22hoaParser.RULE_func_typ




    def func_typ(self):

        localctx = MT22hoaParser.Func_typContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_func_typ)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22hoaParser.INT_TYPE) | (1 << MT22hoaParser.VOID_TYPE) | (1 << MT22hoaParser.FLOAT_TYPE) | (1 << MT22hoaParser.STRING_TYPE) | (1 << MT22hoaParser.BOOLEAN_TYPE) | (1 << MT22hoaParser.AUTO_TYPE))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(MT22hoaParser.IdlistContext,0)


        def COLON(self):
            return self.getToken(MT22hoaParser.COLON, 0)

        def typ(self):
            return self.getTypedRuleContext(MT22hoaParser.TypContext,0)


        def SEMI(self):
            return self.getToken(MT22hoaParser.SEMI, 0)

        def fullformat(self):
            return self.getTypedRuleContext(MT22hoaParser.FullformatContext,0)


        def getRuleIndex(self):
            return MT22hoaParser.RULE_vardecl




    def vardecl(self):

        localctx = MT22hoaParser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_vardecl)
        try:
            self.state = 123
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.idlist()
                self.state = 116
                self.match(MT22hoaParser.COLON)
                self.state = 117
                self.typ()
                self.state = 118
                self.match(MT22hoaParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 120
                self.fullformat()
                self.state = 121
                self.match(MT22hoaParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FullformatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22hoaParser.ID, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22hoaParser.COMMA)
            else:
                return self.getToken(MT22hoaParser.COMMA, i)

        def fullformat(self):
            return self.getTypedRuleContext(MT22hoaParser.FullformatContext,0)


        def expr(self):
            return self.getTypedRuleContext(MT22hoaParser.ExprContext,0)


        def COLON(self):
            return self.getToken(MT22hoaParser.COLON, 0)

        def typ(self):
            return self.getTypedRuleContext(MT22hoaParser.TypContext,0)


        def ASSIGN(self):
            return self.getToken(MT22hoaParser.ASSIGN, 0)

        def getRuleIndex(self):
            return MT22hoaParser.RULE_fullformat




    def fullformat(self):

        localctx = MT22hoaParser.FullformatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_fullformat)
        try:
            self.state = 137
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                self.match(MT22hoaParser.ID)
                self.state = 126
                self.match(MT22hoaParser.COMMA)
                self.state = 127
                self.fullformat()
                self.state = 128
                self.match(MT22hoaParser.COMMA)
                self.state = 129
                self.expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 131
                self.match(MT22hoaParser.ID)
                self.state = 132
                self.match(MT22hoaParser.COLON)
                self.state = 133
                self.typ()
                self.state = 134
                self.match(MT22hoaParser.ASSIGN)
                self.state = 135
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22hoaParser.ID, 0)

        def COMMA(self):
            return self.getToken(MT22hoaParser.COMMA, 0)

        def idlist(self):
            return self.getTypedRuleContext(MT22hoaParser.IdlistContext,0)


        def getRuleIndex(self):
            return MT22hoaParser.RULE_idlist




    def idlist(self):

        localctx = MT22hoaParser.IdlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_idlist)
        try:
            self.state = 143
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 139
                self.match(MT22hoaParser.ID)
                self.state = 140
                self.match(MT22hoaParser.COMMA)
                self.state = 141
                self.idlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 142
                self.match(MT22hoaParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MT22hoaParser.ARRAY, 0)

        def LSB(self):
            return self.getToken(MT22hoaParser.LSB, 0)

        def dimension(self):
            return self.getTypedRuleContext(MT22hoaParser.DimensionContext,0)


        def RSB(self):
            return self.getToken(MT22hoaParser.RSB, 0)

        def OF(self):
            return self.getToken(MT22hoaParser.OF, 0)

        def atomic_typ(self):
            return self.getTypedRuleContext(MT22hoaParser.Atomic_typContext,0)


        def getRuleIndex(self):
            return MT22hoaParser.RULE_array_decl




    def array_decl(self):

        localctx = MT22hoaParser.Array_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_array_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(MT22hoaParser.ARRAY)
            self.state = 146
            self.match(MT22hoaParser.LSB)
            self.state = 147
            self.dimension()
            self.state = 148
            self.match(MT22hoaParser.RSB)
            self.state = 149
            self.match(MT22hoaParser.OF)
            self.state = 150
            self.atomic_typ()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimensionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_LIT(self):
            return self.getToken(MT22hoaParser.INT_LIT, 0)

        def COMMA(self):
            return self.getToken(MT22hoaParser.COMMA, 0)

        def dimension(self):
            return self.getTypedRuleContext(MT22hoaParser.DimensionContext,0)


        def getRuleIndex(self):
            return MT22hoaParser.RULE_dimension




    def dimension(self):

        localctx = MT22hoaParser.DimensionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_dimension)
        try:
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 152
                self.match(MT22hoaParser.INT_LIT)
                self.state = 153
                self.match(MT22hoaParser.COMMA)
                self.state = 154
                self.dimension()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 155
                self.match(MT22hoaParser.INT_LIT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_literalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCB(self):
            return self.getToken(MT22hoaParser.LCB, 0)

        def exprlist(self):
            return self.getTypedRuleContext(MT22hoaParser.ExprlistContext,0)


        def RCB(self):
            return self.getToken(MT22hoaParser.RCB, 0)

        def getRuleIndex(self):
            return MT22hoaParser.RULE_array_literal




    def array_literal(self):

        localctx = MT22hoaParser.Array_literalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_array_literal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.match(MT22hoaParser.LCB)
            self.state = 159
            self.exprlist()
            self.state = 160
            self.match(MT22hoaParser.RCB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exprlist1(self):
            return self.getTypedRuleContext(MT22hoaParser.Exprlist1Context,0)


        def getRuleIndex(self):
            return MT22hoaParser.RULE_exprlist




    def exprlist(self):

        localctx = MT22hoaParser.ExprlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_exprlist)
        try:
            self.state = 164
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22hoaParser.SUB, MT22hoaParser.NOT, MT22hoaParser.LB, MT22hoaParser.LCB, MT22hoaParser.ID, MT22hoaParser.INT_LIT, MT22hoaParser.FLOAT_LIT, MT22hoaParser.BOOL_LIT, MT22hoaParser.STRING_LIT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 162
                self.exprlist1()
                pass
            elif token in [MT22hoaParser.RCB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exprlist1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(MT22hoaParser.ExprContext,0)


        def COMMA(self):
            return self.getToken(MT22hoaParser.COMMA, 0)

        def exprlist1(self):
            return self.getTypedRuleContext(MT22hoaParser.Exprlist1Context,0)


        def getRuleIndex(self):
            return MT22hoaParser.RULE_exprlist1




    def exprlist1(self):

        localctx = MT22hoaParser.Exprlist1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_exprlist1)
        try:
            self.state = 171
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 166
                self.expr()
                self.state = 167
                self.match(MT22hoaParser.COMMA)
                self.state = 168
                self.exprlist1()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 170
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

